# multitool

./: README.md  TESTING_APPROACH.md  package.json  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: CommandPalette.tsx
src/tools/: Base64Encoder.tsx  HashGenerator.tsx  HtmlEntitiesEncoder.tsx  JsonFormatter.tsx  JwtDecoder.tsx  MarkdownPreview.tsx  PasswordGenerator.tsx  RegexTester.tsx  StringUtilities.tsx  TextDiff.tsx  UrlEncoder.tsx  UuidGenerator.tsx  XmlFormatter.tsx  index.ts
src/types/: MultitoolModule.ts
src/utils/: formatUtils.test.ts  formatUtils.ts  stringUtils.test.ts  stringUtils.ts
