[package]
name = "multitool"
version = "1.0.0"
description = "A developer multitool"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
tauri = { version = "1.5.0", features = ["clipboard-all", "global-shortcut", "window-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
